Fixed Shapes causing body and screen overflow

--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -25,6 +25,8 @@
   --card-bg-color: #ffffff;
 }
 
+
+
 body {
   font-family: 'Arial', sans-serif;
   background-color: var(--bg-color);
@@ -35,6 +37,7 @@ body {
   line-height: 1.6;
   transition: background-color 0.3s ease, color 0.3s ease;
   max-width: 100%;
+  overflow-x: hidden;
 }
 
 .top-bar {
@@ -48,7 +51,6 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 1.5rem;
-  overflow: hidden;
 }
 
 /* Navigation styling */
@@ -268,6 +270,11 @@ nav ul li a:hover {
   vertical-align: middle;
 }
 
+.shapes-container{
+  position: relative;
+  height: 100%;
+}
+
 .shapes .circle,
 .shapes .circle2,
 .shapes .circle3 {
@@ -282,8 +289,8 @@ nav ul li a:hover {
 .shapes .circle {
   width: 200px;
   height: 200px;
-  top: -50px;
-  right: -50px;
+  top: -400px;
+  right: -97vw;
 }
 
 .shapes .circle2 {
@@ -296,8 +303,8 @@ nav ul li a:hover {
 .shapes .circle3 {
   width: 150px;
   height: 150px;
-  bottom: 100px;
-  right: 100px;
+  bottom: -150px;
+  right: -80vw;
 }
 
 @keyframes rotate {
